# ai-dj

./: .gitignore  README.md  aidj.spec  compose.yaml  install-shortcut.ps1  launch.ps1  pyproject-win.toml  pyproject.toml  run.py  setup.py  start_windows.py
.github/workflows/: release.yml  test.yml
assets/: ai-dj.desktop
scripts/: apply_manual_tags.py  apply_recovered.py  build_index.py  clap_debug.py  fetch_photos.py  find_unorganized.py  gpu_smoke.py  identify_untagged.py  install_shortcut.py  make_screenshots.py  mert_probe.py  migrate_to_embedded.py  qdrant_down.sh  qdrant_probe.py  qdrant_up.sh  rename_nonsensical.py  tag_library.py  tag_library_discogs.py
src/ai_dj/: __init__.py  ai_engine.py  clap_tag.py  config.py  discogs_tag.py  discover.py  embed.py  index.py  indexer.py  path.py  paths.py  photos.py  player.py  projection.py  scan.py  sets.py  settings.py  styles.py
src/ai_dj/gui/: app.py  library.py  sets.py  setup.py
src/ai_dj/visualizers/: __init__.py  _umap_scene.py  base.py  first_person.py  follow.py  free.py  landscape.py  topdown.py
