[project]
name = "ai-dj"
version = "0.0.1"
description = "AI DJ — MERT-based music embedding and path-planning player"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Plain torch — pip's platform wheels handle CPU/CUDA/MPS automatically.
    # For AMD ROCm see the README (one extra `uv pip install` overrides this).
    "torch>=2.5",
    "torchaudio>=2.5",
    "numpy",
    "transformers>=4.40",
    "librosa>=0.10",
    "soundfile",
    "qdrant-client>=1.17,<2",
    "mutagen>=1.47",
    "tqdm>=4.66",
    "umap-learn>=0.5",
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
    "PyOpenGL",
    "python-mpv>=1.0",
]

[project.scripts]
ai-dj = "ai_dj.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_dj"]
